src/test/ui/issues/issue-54062.stderr
error[E0616]: field `inner` of struct `std::sync::Mutex` is private
  --> $DIR/issue-54062.rs:10:13
   |
LL |     let _ = test.comps.inner.lock().unwrap();
   |             ^^^^^^^^^^^^^^^^

error[E0599]: no method named `unwrap` found for type `std::sys_common::mutex::MutexGuard<'_>` in the current scope
  --> $DIR/issue-54062.rs:10:37
   |
LL |     let _ = test.comps.inner.lock().unwrap();
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                                     ^^^^^^
=======
   |                                     ^^^^^^ method not found in `std::sys_common::mutex::MutexGuard<'_>`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0599, E0616.
For more information about an error, try `rustc --explain E0599`.
